--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,83 @@
   --breakpoint-3xl:1920px;
 }
 
+@keyframes marquee-alternate {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee-alternate {
+  display: flex;
+  animation: marquee-alternate 10s linear infinite alternate;
+}
+
+/* Connected Images */
+@keyframes border-glow {
+  0% {
+    filter: hue-rotate(0deg);
+  }
+  100% {
+    filter: hue-rotate(360deg);
+  }
+}
+
+
+/* Hide scrollbar for mobile slider */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+
+ /* image collage */
+/*  Floating Animations  */
+@keyframes float1 {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+
+@keyframes float2 {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-15px);
+  }
+}
+
+@keyframes float3 {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+}
+
+.animate-float-1 {
+  animation: float1 6s ease-in-out infinite;
+}
+
+.animate-float-2 {
+  animation: float2 7s ease-in-out infinite;
+}
+
+.animate-float-3 {
+  animation: float3 8s ease-in-out infinite;
+}
+
+
 html,
 body {
   height: 100%;
